import from colab

--- a/week01_embeddings/seminar.ipynb
+++ b/week01_embeddings/seminar.ipynb
@@ -690,11 +690,11 @@
       "execution_count": 28,
       "metadata": {
         "id": "7m-6HJs50np5",
-        "outputId": "66e0247e-92b0-41d9-e562-a9f3373d812e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 434
-        }
+        },
+        "outputId": "66e0247e-92b0-41d9-e562-a9f3373d812e"
       },
       "outputs": [
         {
@@ -1650,11 +1650,11 @@
       "execution_count": 37,
       "metadata": {
         "id": "KFkmIGK00np6",
-        "outputId": "73a3832c-1c7e-4e29-ad02-ae2e24f0f907",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 434
-        }
+        },
+        "outputId": "73a3832c-1c7e-4e29-ad02-ae2e24f0f907"
       },
       "outputs": [
         {
@@ -2558,10 +2558,10 @@
       "execution_count": 46,
       "metadata": {
         "id": "Q-_ByBZC0np9",
-        "outputId": "c11d83e5-902c-41d5-cb35-9a97fd52b995",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c11d83e5-902c-41d5-cb35-9a97fd52b995"
       },
       "outputs": [
         {
@@ -2651,11 +2651,11 @@
       "execution_count": 60,
       "metadata": {
         "id": "w-4kEc9b0np9",
-        "outputId": "efb5acb5-85b5-4b7f-f82f-8691efcc4c18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "outputId": "efb5acb5-85b5-4b7f-f82f-8691efcc4c18"
       },
       "outputs": [
         {
@@ -3100,11 +3100,11 @@
       "execution_count": 61,
       "metadata": {
         "id": "g_4W_EYJ0np9",
-        "outputId": "38f4bff0-6527-4233-84d6-fd0933c67b67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 624
-        }
+        },
+        "outputId": "38f4bff0-6527-4233-84d6-fd0933c67b67"
       },
       "outputs": [
         {
@@ -3250,10 +3250,10 @@
       "execution_count": 62,
       "metadata": {
         "id": "N5lmIxfm0np9",
-        "outputId": "b617bf67-24bd-4f0d-8ff7-2d65231bb118",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b617bf67-24bd-4f0d-8ff7-2d65231bb118"
       },
       "outputs": [
         {
@@ -3313,14 +3313,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 73,
       "metadata": {
         "id": "6aUzBc2R0np9",
-        "outputId": "7411e1fb-5683-4e81-fb63-2bdc7bbbe819",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 569
-        }
+          "height": 586
+        },
+        "outputId": "dfecf9e9-f805-4c61-ad2d-92652468ff4a"
       },
       "outputs": [
         {
@@ -3335,6 +3335,13 @@
             "Please also refer to the documentation for alternative solver options:\n",
             "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
             "  n_iter_i = _check_optimize_result(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Assert passed\n"
           ]
         },
         {
@@ -3365,7 +3372,8 @@
         "plt.legend(fontsize='large')\n",
         "plt.grid()\n",
         "\n",
-        "assert roc_auc_score(y_test, wv_model.predict_proba(X_test_wv)[:, 1]) > 0.93, \"something's wrong with your features\""
+        "assert roc_auc_score(y_test, wv_model.predict_proba(X_test_wv)[:, 1]) > 0.93, \"something's wrong with your features\"\n",
+        "print(\"Assert passed\")"
       ]
     },
     {
